--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="mockup-phone">
         <div class="camera"></div>
         <div class="display">
-          <div class="artboard artboard-demo phone-1">
+          <div class="artboard artboard-demo phone-3">
             <!-- login form -->
 
             <div class="hero bg-base-200 min-h-screen">
@@ -35,6 +35,7 @@
                         type="text"
                         placeholder="Your phone number"
                         class="input input-bordered"
+                        autocomplete="off"
                         required
                       />
                     </div>
@@ -43,6 +44,7 @@
                         <span class="label-text">Pin</span>
                       </label>
                       <input
+                        id="pin-number"
                         type="password"
                         placeholder="Your pin"
                         class="input input-bordered"
