--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
             <div>
               <div class="stats shadow">
                 <div class="stat">
-                  <div class="stat-value">9400</div>
+                  <div id="account-balance" class="stat-value">9400</div>
                   <div class="stat-desc">Available Balance</div>
                 </div>
               </div>
@@ -36,7 +36,7 @@
              </div>
              <div class="divider"></div>
              <!-- add money form start -->
-             <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+             <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                 <form class="card-body">
                   <div class="form-control">
                     <label class="label">
@@ -56,10 +56,34 @@
                 </form>
               </div>
              <!-- add money form end-->
+
+             <!-- cash out from stat -->
+             <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+                <form class="card-body">
+                  <div class="form-control">
+                    <label class="label">
+                      <span class="label-text">Amount</span>
+                    </label>
+                    <input id="input-add-money" type="text" placeholder="amount" class="input input-bordered" required />
+                  </div>
+                  <div class="form-control">
+                    <label class="label">
+                      <span class="label-text">Pin</span>
+                    </label>
+                    <input id="input-pin-number" type="password" placeholder="pin" class="input input-bordered" required autocomplete="off" />
+                  </div>
+                  <div class="form-control mt-6">
+                    <button id="btn-cash-out" class="btn btn-primary">Cash Out</button>
+                  </div>
+                </form>
+              </div>
+             <!-- cash out from end -->
           </div>
         </div>
       </div>
     </main>
-    <script src="js/home.js"></script>
+    <!-- <script src="js/home.js"></script> -->
+     <!-- <script src="js/addmoney.js"></script> -->
+      <script src="js/cashout.js"></script>
   </body>
 </html>
