tab feature add

--- a/home.html
+++ b/home.html
@@ -31,12 +31,12 @@
 
             <!-- user action button -->
              <div>
-                <button class="btn btn-lg">Add Money</button>
-                <button class="btn btn-lg">Cash Out</button>
+                <button id="btn-show-add-money" class="btn btn-lg">Add Money</button>
+                <button id="btn-show-cash-out" class="btn btn-lg">Cash Out</button>
              </div>
              <div class="divider"></div>
              <!-- add money form start -->
-             <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+             <div id="add-money-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                 <form class="card-body">
                   <div class="form-control">
                     <label class="label">
@@ -58,19 +58,19 @@
              <!-- add money form end-->
 
              <!-- cash out from stat -->
-             <div class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
+             <div id="cash-out-form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                 <form class="card-body">
                   <div class="form-control">
                     <label class="label">
                       <span class="label-text">Amount</span>
                     </label>
-                    <input id="input-add-money" type="text" placeholder="amount" class="input input-bordered" required />
+                    <input id="input-cash-out-amount" type="text" placeholder="amount" class="input input-bordered" required />
                   </div>
                   <div class="form-control">
                     <label class="label">
                       <span class="label-text">Pin</span>
                     </label>
-                    <input id="input-pin-number" type="password" placeholder="pin" class="input input-bordered" required autocomplete="off" />
+                    <input id="input-cash-out-pin" type="password" placeholder="pin" class="input input-bordered" required autocomplete="off" />
                   </div>
                   <div class="form-control mt-6">
                     <button id="btn-cash-out" class="btn btn-primary">Cash Out</button>
@@ -83,7 +83,8 @@
       </div>
     </main>
     <!-- <script src="js/home.js"></script> -->
-     <!-- <script src="js/addmoney.js"></script> -->
+     <script src="js/addmoney.js"></script>
       <script src="js/cashout.js"></script>
+      <script src="js/feature.js"></script>
   </body>
 </html>
